adding enpoint to internal api for getting all facts
