# internal-api/docs/swagger.yaml
@@ -17,6 +17,17 @@ definitions:
       error:
         type: string
     type: object
+  handler.Fact:
+    properties:
+      approved:
+        type: boolean
+      fact:
+        type: string
+      id:
+        type: string
+      source:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -128,4 +139,23 @@ paths:
           schema:
             $ref: '#/definitions/api.ErrorResult'
       summary: unapprove fact
+  /facts/all:
+    get:
+      description: gets all facts (approved and unapproved) from the database
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/handler.Fact'
+              type: array
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResult'
+      summary: gets all facts
 swagger: "2.0"
